[tool.poetry]
name = "blog"
version = "0.1.0"
description = "blog on Django"
authors = ["Alfir Tyakin <alfir7777@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.13"
Django = "3.2.11"
django-ckeditor = "6.1.0"
django-recaptcha = "2.0.6"
django-smtp-ssl = "1.0"
djangorestframework = "3.12.4"
gunicorn = "20.1.0"
Pillow = "8.3.2"
psycopg2-binary = "2.9.1"
python-dotenv = "0.19.0"
pytils = "0.4.1"

[tool.poetry.dev-dependencies]
django-debug-toolbar = "3.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
